feat(client): show news on #1 per state
- upon clicking a state, a button appears above the map
- upon clicking the button, the news/article modal displays relevant articles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,3 +50,7 @@ a.text-decoration-none:hover{
 .cursor-pointer{
   cursor: pointer;
 }
+
+.react-tooltip-clickable-link {
+  pointer-events: auto !important;
+}
